--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Dhuruv</title>
   </head>
   <body class="bg-clip-transparent bg-gradient-to-b from-gray-700 via-red-00 to-red-00 h-screen">
     <div id="root"></div>
