--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dhuruv</title>
   </head>
-  <body class="bg-clip-transparent bg-gradient-to-b from-gray-700 via-red-00 to-red-00 h-screen">
+  <body class="bg-clip-transparent bg-cyan-100">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
